Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20517

Assertion `!is_expensive()' failed in Item::value_depends_on_sql_mode_const_item

    XMLWordPrintable

Details

    Description

      SELECT ( 1 LIKE GET_LOCK( 'foo', 0 ) ) - 2;
      

      10.2 41e351f6 debug

      mysqld: /data/src/10.2/sql/item.h:1231: bool Item::value_depends_on_sql_mode_const_item(): Assertion `!is_expensive()' failed.
      190906 19:41:00 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007fe3ba075f12 in __GI___assert_fail (assertion=0x555957c6ac19 "!is_expensive()", file=0x555957c6abf0 "/data/src/10.2/sql/item.h", line=1231, function=0x555957c6d480 <Item::value_depends_on_sql_mode_const_item()::__PRETTY_FUNCTION__> "bool Item::value_depends_on_sql_mode_const_item()") at assert.c:101
      #8  0x00005559573d6339 in Item::value_depends_on_sql_mode_const_item (this=0x7fe3a40128b0) at /data/src/10.2/sql/item.h:1231
      #9  0x00005559573d0bf5 in Item_func_like::value_depends_on_sql_mode (this=0x7fe3a4012a20) at /data/src/10.2/sql/item_cmpfunc.cc:5311
      #10 0x00005559573faaa0 in Item_args::value_depends_on_sql_mode_bit_or (this=0x7fe3a4012c90) at /data/src/10.2/sql/item_func.cc:429
      #11 0x00005559570a3190 in Item_func_or_sum::value_depends_on_sql_mode (this=0x7fe3a4012c08) at /data/src/10.2/sql/item.h:4370
      #12 0x00005559573fe615 in Item_func_minus::fix_length_and_dec (this=0x7fe3a4012c08) at /data/src/10.2/sql/item_func.cc:1426
      #13 0x00005559573fa27e in Item_func::fix_fields (this=0x7fe3a4012c08, thd=0x7fe3a4000b00, ref=0x7fe3a4012cf0) at /data/src/10.2/sql/item_func.cc:229
      #14 0x000055595709d621 in setup_fields (thd=0x7fe3a4000b00, ref_pointer_array=..., fields=..., mark_used_columns=MARK_COLUMNS_READ, sum_func_list=0x7fe3a4013138, pre_fix=0x7fe3a4004f80, allow_sum_func=true) at /data/src/10.2/sql/sql_base.cc:7204
      #15 0x00005559571440a7 in JOIN::prepare (this=0x7fe3a4012e18, tables_init=0x0, wild_num=0, conds_init=0x0, og_num=0, order_init=0x0, skip_order_by=false, group_init=0x0, having_init=0x0, proc_param_init=0x0, select_lex_arg=0x7fe3a4004e40, unit_arg=0x7fe3a4004700) at /data/src/10.2/sql/sql_select.cc:815
      #16 0x000055595714ea08 in mysql_select (thd=0x7fe3a4000b00, tables=0x0, wild_num=0, fields=..., conds=0x0, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2147748608, result=0x7fe3a4012df8, unit=0x7fe3a4004700, select_lex=0x7fe3a4004e40) at /data/src/10.2/sql/sql_select.cc:3800
      #17 0x0000555957142d26 in handle_select (thd=0x7fe3a4000b00, lex=0x7fe3a4004638, result=0x7fe3a4012df8, setup_tables_done_option=0) at /data/src/10.2/sql/sql_select.cc:365
      #18 0x000055595710deef in execute_sqlcom_select (thd=0x7fe3a4000b00, all_tables=0x0) at /data/src/10.2/sql/sql_parse.cc:6226
      #19 0x00005559571048d0 in mysql_execute_command (thd=0x7fe3a4000b00) at /data/src/10.2/sql/sql_parse.cc:3533
      #20 0x0000555957111da2 in mysql_parse (thd=0x7fe3a4000b00, rawbuf=0x7fe3a40125b0 "SELECT ( 1 LIKE GET_LOCK( 'foo', 0 ) ) - 2", length=42, parser_state=0x7fe3b43a9200, is_com_multi=false, is_next_command=false) at /data/src/10.2/sql/sql_parse.cc:7760
      #21 0x00005559571000ab in dispatch_command (command=COM_QUERY, thd=0x7fe3a4000b00, packet=0x7fe3a408d601 "SELECT ( 1 LIKE GET_LOCK( 'foo', 0 ) ) - 2", packet_length=42, is_com_multi=false, is_next_command=false) at /data/src/10.2/sql/sql_parse.cc:1832
      #22 0x00005559570fe9ff in do_command (thd=0x7fe3a4000b00) at /data/src/10.2/sql/sql_parse.cc:1385
      #23 0x000055595725388d in do_handle_one_connection (connect=0x5559596fb6a0) at /data/src/10.2/sql/sql_connect.cc:1336
      #24 0x00005559572535f8 in handle_one_connection (arg=0x5559596fb6a0) at /data/src/10.2/sql/sql_connect.cc:1241
      #25 0x0000555957a84592 in pfs_spawn_thread (arg=0x55595971e950) at /data/src/10.2/storage/perfschema/pfs.cc:1862
      #26 0x00007fe3bbbea4a4 in start_thread (arg=0x7fe3b43aa700) at pthread_create.c:456
      #27 0x00007fe3ba132d0f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:97
      

      Not reproducible on 10.1.
      No obvious effect on a non-debug build.

      The failure appeared in 10.2 tree with this commit:

      commit dc719597ee0b11da722e9813639e8b48018a8c10
      Author: Alexander Barkov
      Date:   Mon Aug 26 15:28:32 2019 +0400
       
          MDEV-18156 Assertion `0' failed or `btr_validate_index(index, 0, false)' in row_upd_sec_index_entry or error code 126: Index is corrupted upon DELETE with PAD_CHAR_TO_FULL_LENGTH
      

      Attachments

        Activity

          People

            bar Alexander Barkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.