MDEV-20517 Assertion `!is_expensive()' failed in Item::value_depends_on_sql_mode_const_item